# spotify-playlist-retrieval

./: pyproject.toml  ruff.toml
src/spotiplaylist/: main.py
tests/: test_main.py
